# cline-fast-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db_utils.py  docker-compose.yml  init.sql  main.py  mypy.ini  pyproject.toml  ruff.toml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  endpoints.py
app/core/: __init__.py  config.py  database.py  exceptions.py
app/models/: __init__.py
app/services/: __init__.py  model_generator.py  schema_extractor.py
docker/: Dockerfile  docker-compose.yml  init.sql
requirements/: base.txt  dev.txt
tests/: __init__.py  conftest.py
